# arctan

./: .gitignore  CMakeLists.txt  README.md  all.gyp  build.sh
base/: CMakeLists.txt  base.gyp  base.h  combination.h  common.gypi  modulo.cc  modulo.h  modulo.md  prime.cc  prime.h  time.cc  time.h
drm/: CMakeLists.txt  drm.cc  drm.gyp  drm.h  drm2.cc  drm2.h  drm3.cc  drm3.h  drm3_main.cc  drm4.cc  drm4.h  drm4_main.cc  drm4_test.cc  drm5.cc  drm5.h  drm6.cc  drm6.h  drm_main.cc  number.cc  number.h
note/: pi_tt_2014.html
number/: CMakeLists.txt  factored_integer.cc  factored_integer.h  integer.cc  integer.h  number.gyp  real.cc  real.h
search/: CMakeLists.txt  combination_bench.cc  search.cc  search.gyp  search.h  search_main.cc
search/result/: README.md  pi_3_p2000_x10-8.txt  pi_3_p400_x10-7.txt  pi_4_p1000_x10-7.txt  pi_4_p2000_x10-8.txt  pi_4_p200_x10000000.txt  pi_4_p400_x10-7.txt
